--- a/EDA_Final_Draft.html
+++ b/EDA_Final_Draft.html
@@ -399,7 +399,7 @@ access-related influences.</p>
 <p>Fist prepare the environment for our research project, and load raw
 annual datasets on diabetes from 2015 to 2019.</p>
 <pre class="r"><code># Set Working Directory 
-setwd(&quot;/Users/gracesong/Library/Mobile Documents/com~apple~CloudDocs/Documents/Emory/QTM 302W/EDA_project/data&quot;)
+setwd(&quot;/Users/gracesong/Documents/GitHub/qtm302w-EDA/data&quot;)
 
 # Load the 2015-2019 dataset
 data_2015 &lt;- read.csv(&quot;IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2015_BOTH_Y2025M02D10.csv&quot;)
