--- a/EDA_Final_Draft.html
+++ b/EDA_Final_Draft.html
@@ -398,15 +398,12 @@ access-related influences.</p>
 <h3>Input Datasets</h3>
 <p>Fist prepare the environment for our research project, and load raw
 annual datasets on diabetes from 2015 to 2019.</p>
-<pre class="r"><code># Set Working Directory 
-setwd(&quot;/Users/gracesong/Documents/GitHub/qtm302w-EDA/data&quot;)
-
-# Load the 2015-2019 dataset
-data_2015 &lt;- read.csv(&quot;IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2015_BOTH_Y2025M02D10.csv&quot;)
-data_2016 &lt;- read.csv(&quot;IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2016_BOTH_Y2025M02D10.csv&quot;)
-data_2017 &lt;- read.csv(&quot;IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2017_BOTH_Y2025M02D10.csv&quot;)
-data_2018 &lt;- read.csv(&quot;IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2018_BOTH_Y2025M02D10.csv&quot;)
-data_2019 &lt;- read.csv(&quot;IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2019_BOTH_Y2025M02D10.csv&quot;)</code></pre>
+<pre class="r"><code># Load the 2015-2019 dataset
+data_2015 &lt;- read.csv(&quot;data/IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2015_BOTH_Y2025M02D10.csv&quot;)
+data_2016 &lt;- read.csv(&quot;data/IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2016_BOTH_Y2025M02D10.csv&quot;)
+data_2017 &lt;- read.csv(&quot;data/IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2017_BOTH_Y2025M02D10.csv&quot;)
+data_2018 &lt;- read.csv(&quot;data/IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2018_BOTH_Y2025M02D10.csv&quot;)
+data_2019 &lt;- read.csv(&quot;data/IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2019_BOTH_Y2025M02D10.csv&quot;)</code></pre>
 </div>
 <div id="load-library" class="section level3">
 <h3>Load Library</h3>
